--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "routes": [
     { "src": "/api/login", "dest": "api/Serverless-login.ts" },
-    { "src": "/api/create", "dest": "api/CreateUserFunction.ts" },
-    { "src": "/api/check", "dest": "api/CheckUserFunction.ts" }
+    { "src": "/api/create", "dest": "api/CreateUser.ts" },
+    { "src": "/api/check", "dest": "api/CheckUser.ts" }
   ]
 }
