--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "micro-cors": "^0.1.1",
     "mongodb": "^6.2.0",
     "ts-node": "^10.9.1"
   }
