--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "rewrites": [
-  {"source": "/(*)", "destination": "/api/Serverles-login.ts"}
+  {"source": "/api/(*)", "destination": "/api/Serverles-login.ts"}
   ]
 }
