--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
     "types": "^0.1.1"
   },
   "scripts": {
-    "tsc": "tsc",
-    "build": "tsc",
-    "vercel-build": "echo hello",
-    "server": "ts-node ./api/Serverless-login.ts"
+    "tsc": "tsc"
     
   },
   "dependencies": {
