--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,15 @@
 {
-  "rewrites": [{ "source": "/api/(.*)", "destination": "/api/Serverless-login.ts"}]
+  "version": 2,
+  "builds": [{ "src": "api/**/*.ts", "use": "@vercel/node" }],
+  "routes": [
+    { "handle": "filesystem" },
+    {
+      "src": "/api/.*",
+      "dest": "/api/index.ts",
+      "methods": ["GET", "POST"],
+      "headers": {
+        "Access-Control-Allow-Origin": "http://127.0.0.1:5500/" 
+      }
+    }
+  ]
 }
