--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
-{
+{  
   "dependencies": {
+    "type": "module",
     "@vercel/postgres": "^0.5.1",
     "next": "^14.0.1",
     "next.js": "^1.0.3",
