--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
-{  
-  "dependencies": {
-    "type": "module",
+
+{
+  "name": "lavida",
+  "version": "1.0.0",
+  "description": "A Node.js module using ES6 modules",
+  "type": "module", 
+
+
+  "scripts": {
+    "start": "node index.mjs"
+  },
+
+    "dependencies": {
     "@vercel/postgres": "^0.5.1",
     "next": "^14.0.1",
     "next.js": "^1.0.3",
